--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
             <h3>Top three activities to do at Torshov</h3>
             <div class="activities">
                 <div class="active">
-            <img class="round" src="images/park.jpg">
+            <img class="round" src="park.jpg">
             <h5>Attend a show or a concert</h5>
             <p>The Torshov Theatre is a great place to spend your night out.</p>
                 </div>
                 <div class="active">
-            <img class="round" src="images/theatre.jpg">
+            <img class="round" src="/theatre.jpg">
             <h5>Go for a piknic in the local park</h5>
             <p>The Torshov Park is perfect for piknic, getting some tan, or just chilling out.</p>
                 </div>
                 <div class="active">
-            <img class="round" src="images/sports.jpg">
+            <img class="round" src="/sports.jpg">
             <h5>Play sports at the Lilleborg field</h5>
             <p>Play volleyball, football, basket ball or lift some weights.</p>
                 </div>
@@ -36,7 +36,7 @@
         <!-- GUIDE SECTION -->
         <div id="guide-section" class="flex-box">
             <div id="visitka">
-                    <img src="images/per.jpg" id="per">
+                    <img src="/per.jpg" id="per">
                     <div id="card">
                         <h3>Your guide</h3>
                         <p id="card-text">I have lived at Torshov for over 30 years, so I can show you all of its best parts and hidden secrets."</p>
