--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h3>Top three activities to do at Torshov</h3>
             <div class="activities">
                 <div class="active">
-            <img class="round" src="park.jpg">
+            <img class="round" src="/park.jpg">
             <h5>Attend a show or a concert</h5>
             <p>The Torshov Theatre is a great place to spend your night out.</p>
                 </div>
